mise à jour index

--- a/index.html
+++ b/index.html
@@ -20,5 +20,68 @@
           <a href="#" class="btn btn-custom">Acheter!</a>
         </div>
       </div>
+
+      <div class="row">
+        <div class="col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">MAJ 1</h5>
+              <p class="card-text">Exemple de texte sur une mise à jour.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">MAJ 2</h5>
+              <p class="card-text">Exemple de texte sur une mise à jour..</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="assets/img/Question_mark_(black).svg.png" class="d-block img-fluid img-sm" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>More About Us</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, nunc id tempor auctor, nisi nibh tincidunt nunc, vitae laoreet nibh nulla non nunc.</p>
+              <a href="#" class="btn btn-primary">Voir plus</a>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="assets/img/Question_mark_(black).svg.png" class="d-block img-fluid img-sm" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>More About Us</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, nunc id tempor auctor, nisi nibh tincidunt nunc, vitae laoreet nibh nulla non nunc.</p>
+              <a href="#" class="btn btn-primary">Voir plus</a>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="assets/img/Question_mark_(black).svg.png" class="d-block img-fluid img-sm" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>More About Us</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, nunc id tempor auctor, nisi nibh tincidunt nunc, vitae laoreet nibh nulla non nunc.</p>
+              <a href="#" class="btn btn-primary">Voir plus</a>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
 </body>
 </html>
