--- a/resgister.html
+++ b/resgister.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Darkest Dungeon - Présentation</title>
+    <title>Darkest Dungeon - Register</title>
 
     <link href="/assets/style/style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -51,50 +51,24 @@
                                     <label class="form-label" for="form3Example3">Email address</label>
                                 </div>
 
+                                
+
                                 <!-- Password input -->
                                 <div data-mdb-input-init class="form-outline mb-4">
                                     <input type="password" id="form3Example4" class="form-control" />
-                                    <label class="form-label" for="form3Example4">Password</label>
+                                    <label class="form-label" for="form3Example4">mot de passe</label>
                                 </div>
 
-                                <!-- Checkbox -->
-                                <div class="form-check d-flex justify-content-center mb-4">
-                                    <input class="form-check-input me-2" type="checkbox" value="" id="form2Example33"
-                                        checked />
-                                    <label class="form-check-label" for="form2Example33">
-                                        Subscribe to our newsletter
-                                    </label>
+                                <!-- Password input -->
+                                <div data-mdb-input-init class="form-outline mb-4">
+                                    <input type="password" id="form3Example5" class="form-control" />
+                                    <label class="form-label" for="form3Example5">Répéter le mot de passe</label>
                                 </div>
-
                                 <!-- Submit button -->
                                 <button type="submit" data-mdb-button-init data-mdb-ripple-init
                                     class="btn btn-primary btn-block mb-4">
                                     Sign up
                                 </button>
-
-                                <!-- Register buttons -->
-                                <div class="text-center">
-                                    <p>or sign up with:</p>
-                                    <button type="button" data-mdb-button-init data-mdb-ripple-init
-                                        class="btn btn-link btn-floating mx-1">
-                                        <i class="fab fa-facebook-f"></i>
-                                    </button>
-
-                                    <button type="button" data-mdb-button-init data-mdb-ripple-init
-                                        class="btn btn-link btn-floating mx-1">
-                                        <i class="fab fa-google"></i>
-                                    </button>
-
-                                    <button type="button" data-mdb-button-init data-mdb-ripple-init
-                                        class="btn btn-link btn-floating mx-1">
-                                        <i class="fab fa-twitter"></i>
-                                    </button>
-
-                                    <button type="button" data-mdb-button-init data-mdb-ripple-init
-                                        class="btn btn-link btn-floating mx-1">
-                                        <i class="fab fa-github"></i>
-                                    </button>
-                                </div>
                             </form>
                         </div>
                     </div>
@@ -111,35 +85,7 @@
         <!-- Section: Design Block -->
     </main>
 
-    <footer class="text-center text-white" style="background-color:#00000078;">
 
-        <div class="container d-flex justify-content-center py-4">
-
-            <img class="logo-footer" src="/assets/img/logo DD.png">
-
-            <p></p>
-            <a type="button" class="mx-2">
-                <img src="/assets/img/facebook.svg">
-            </a>
-
-            <a type="button" class="mx-2">
-                <img src="/assets/img/instagram.svg">
-            </a>
-
-            <a type="button" class="mx-2">
-                <img src="/assets/img/twitter.svg">
-            </a>
-
-            <a type="button" class="mx-2">
-                <img src="/assets/img/github.svg">
-            </a>
-        </div>
-
-        <div class="text-center text-white py-2" style="background-color:#000;">
-            © 2024 Copyright:
-            <p class="text-white" href="https://mdbootstrap.com/">Darkest Dungeon</p>
-        </div>
-    </footer>
     <!-- Bootstrap JS and dependencies (jQuery and Popper) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
