--- a/login.html
+++ b/login.html
@@ -22,53 +22,58 @@
 
     <main>
 
-      <div class="container py-4">
-        <div class="row g-0 align-items-center">
-            <div class="mb-5 mb-lg-0">
-                <div class="card bg-body-tertiary" style="
-                backdrop-filter: blur(30px);
-                ">
-                    <div class="card-body p-5 shadow-5 text-center">
-                        <h2 class="fw-bold mb-5">Se connecter</h2>
-                        <form>
-                            <!-- Email input -->
-                            <div data-mdb-input-init class="form-outline mb-4">
-                                <input type="email" id="form3Example3" class="form-control" />
-                                <label class="form-label" for="form3Example3">Email address</label>
-                            </div>
+        <div class="container py-4">
+            <div class="row g-0 align-items-center">
+                <div class="col-lg-6 mb-5 mb-lg-0">
+                    <div class="card cascading-right bg-body-tertiary" style="
+                    backdrop-filter: blur(30px);
+                    ">
+                        <div class="card-body p-5 shadow-5 text-center">
+                            <h2 class="fw-bold mb-5">Se connecter</h2>
+                            <form>
 
-                            <!-- Password input -->
-                            <div data-mdb-input-init class="form-outline mb-4">
-                                <input type="password" id="form3Example4" class="form-control" />
-                                <label class="form-label" for="form3Example4">Password</label>
-                            </div>
+                                <!-- Email input -->
+                                <div data-mdb-input-init class="form-outline mb-4">
+                                    <input type="email" id="form3Example3" class="form-control" />
+                                    <label class="form-label" for="form3Example3">Addresse mail</label>
+                                </div>
 
-                            <!-- Checkbox -->
-                            <div class="form-check d-flex justify-content-center mb-4">
-                                <input class="form-check-input me-2" type="checkbox" value="" id="form2Example33"
-                                    checked />
-                                <label class="form-check-label" for="form2Example33">
-                                    se souvenir de moi
-                                </label>
-                            </div>
-                            <div class="text-center">
-                              <a href="#!">mot de passe oublier?</a>
-                            </div>
-                          </div>
+                                
 
-                            <!-- bouton connection -->
-                            <button type="submit" data-mdb-button-init data-mdb-ripple-init
-                                class="btn btn-primary btn-block mb-4">
-                                Connection
-                            </button>
+                                <!-- Password input -->
+                                <div data-mdb-input-init class="form-outline mb-4">
+                                    <input type="password" id="form3Example4" class="form-control" />
+                                    <label class="form-label" for="form3Example4">mot de passe</label>
+                                </div>
 
-                        </form>
+                                <div class="col d-flex justify-content-center">
+                                    <!-- Checkbox -->
+                                    <div class="form-check">
+                                      <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
+                                      <label class="form-check-label" for="form2Example31"> Se souvenir de moi? </label>
+                                    </div>
+                                  </div>
+                                  <br>
+                                <!-- Submit button -->
+                                <button type="submit" data-mdb-button-init data-mdb-ripple-init
+                                    class="btn btn-primary btn-block mb-4">
+                                    Se connecter
+                                </button>
+                                <a href="/./resgister.html">Pas de compte?</a>
+                            </form>
+                        </div>
                     </div>
+                </div>
+
+                <div class="col-lg-6 mb-5 mb-lg-0">
+                    <img src="assets\img\Academic.webp"
+                        class="w-100 rounded-4 shadow-4" alt="" />
                 </div>
             </div>
         </div>
-    </div>
-    </section>
+        <!-- Jumbotron -->
+        </section>
+        <!-- Section: Design Block -->
     
     </main>
 
