--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto align-items-center">
           <li class="nav-item">
-            <a class="nav-link mx-2" href="#!"><i class="fas fa-plus-circle pe-2"></i>Notre jeu </a>
+            <a class="nav-link mx-2" href="présentation.html"><i class="fas fa-plus-circle pe-2"></i>Notre jeu </a>
           </li>
           <li class="nav-item">
             <a class="nav-link mx-2" href="aboutus.html"><i class="fas fa-bell pe-2"></i>A propos</a>
@@ -51,7 +51,7 @@
             <a class="nav-link mx-2" href="#!"><i class="fas fa-heart pe-2"></i>????</a>
           </li>
           <li class="nav-item ms-3">
-            <a class="btn btn-black btn-rounded" href="#!">Se connecter</a>
+            <a class="btn btn-black btn-rounded" href="login.html">Se connecter</a>
           </li>
         </ul>
       </div>
