--- a/login.html
+++ b/login.html
@@ -61,7 +61,7 @@
                                     class="btn btn-primary btn-block mb-4">
                                     Se connecter
                                 </button>
-                                <a href="/./resgister.html">Pas de compte?</a>
+                                <a href="/./register.html">Pas de compte?</a>
                             </form>
                         </div>
                     </div>
@@ -80,6 +80,7 @@
     </main>
 
     <!-- Bootstrap JS and dependencies (jQuery and Popper) -->
+    <script src="login.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
