--- a/présentation.html
+++ b/présentation.html
@@ -15,10 +15,50 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <script src="script.js"></script>
 </head>
 
 <body>
-    
+    <nav class="navbar navbar-expand-lg fixed-top bg-light navbar-light">
+    <div class="container">
+      <a class="navbar-brand" href="index.html"
+        ><img
+          id="RH-logo"
+          src="assets/img/redhook_logo+copy (1).jpg"
+          alt="logo"
+          draggable="false"
+          height="100"
+      /></a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-mdb-toggle="collapse"
+        data-mdb-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto align-items-center">
+          <li class="nav-item">
+            <a class="nav-link mx-2" href="présentation.html"><i class="fas fa-plus-circle pe-2"></i>Notre jeu </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link mx-2" href="aboutus.html"><i class="fas fa-bell pe-2"></i>A propos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link mx-2" href="#!"><i class="fas fa-heart pe-2"></i>????</a>
+          </li>
+          <li class="nav-item ms-3">
+            <a class="btn btn-black btn-rounded" href="login.html">Se connecter</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
     <main>
 
         <div class="paragraphe-1">
