--- a/register.html
+++ b/register.html
@@ -87,6 +87,7 @@
 
 
     <!-- Bootstrap JS and dependencies (jQuery and Popper) -->
+    <script src="register.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
